unpackaged/main/default/objects/Contact/fields/Lead_contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_contact__c</fullName>
    <label>Lead contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eric</fullName>
            </value>
            <value>
                <fullName>John</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>