unpackaged/main/default/objects/Contact/fields/Linked_accounts__c.field-meta.xml
<CustomField>
    <fullName>Linked_accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked accounts</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>