unpackaged/main/default/objects/Contact/fields/Safeguarding_trained__c.field-meta.xml
<CustomField>
    <fullName>Safeguarding_trained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safeguarding trained?</label>
    <type>Checkbox</type>
</CustomField>